# learning-dlai-starting-ragchatbot-codebase

./: .flake8  CLAUDE.md  frontend-changes.md  pyproject.toml
.claude/commands/: implement-feature.md
.github/workflows/: claude-code-review.yml  claude.yml
backend/: ai_generator.py  app.py  search_tools.py  session_manager.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_api_endpoints.py  test_integration.py  test_search_tools.py  test_vector_store.py
frontend/: index.html  script.js  style.css
scripts/: check-all.sh  format.sh  lint.sh
